<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.journaldev.customfonts.MainActivity">

    <com.journaldev.customfonts.CustomTextView
        android:id="@+id/ambleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_amblebold"
        android:textSize="28sp"
        app:font_name="ambleBold" />

    <com.journaldev.customfonts.CustomTextView
        android:id="@+id/ambleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_amblelight"
        android:textSize="28sp"
        app:font_name="ambleLight" />

    <com.journaldev.customfonts.CustomTextView
        android:id="@+id/ambleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_ambleregular"
        android:textSize="24sp"
        app:font_name="ambleRegular" />

    <com.journaldev.customfonts.CustomTextView
        android:id="@+id/opRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_opensansregular"
        android:textSize="24sp"
        app:font_name="openSansRegular" />

    <com.journaldev.customfonts.CustomTextView
        android:id="@+id/opItalic"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_opensansitalic"
        android:textSize="24sp"
        app:font_name="openSansItalic" />

    <Button
        android:id="@+id/pacifico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grecory_ortega_pacifico" />


</LinearLayout>
